automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!-- Write your HTML in this file -->
+<!--Write a well-formed HTML document structure, starting with the doctype. Make sure to include <html> opening and closing tags, along with head and a body tags-->
+<!--Add a set of header tags inside the document body to enclose the site navigation and branding.-->
+<!--Inside the header, add two things:-->
+<!--a nav to house our site navigation links (<nav></nav>)-->
+<!--an h3 to serve as the branding for our site.-->
+<!--After creating opening and closing nav tags, inside those, create an unordered list.-->
+<!--Inside the ul, add a pair of nested list elements to represent the other pages of the site.-->
+<!--Finally, below the nav (but still inside the header), add an h3 containing the site's name, which can be whatever you like!-->
 
